examples/negative/shadowing/user_err_collides_with_result.kai
# Negative fixture (#511 / shadowing contract): user-declared
# variant `Err` collides with `Result.Err`.

pub type Resultado = Err(String) | Other

fn main() : Int = 0
